[project]
name = "screener-in-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiocache>=0.12.3",
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "lxml>=5.3.1",
    "mcp[cli]>=1.5.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
